# WindFarm-SoS-Autonomous

./: README.md  pyproject.toml
.github/workflows/: ci.yml
database/: seed_demo.py
database/init/: 001_schema.sql  002_timeseries.sql
docs/: architecture_notes.md  bill_of_materials.md  build_hardening_notes.md  deployment_guide.md  dissertation_draft.md  dissertation_outline.md  evaluation_metrics.md  evaluation_plan.md  integration_validation_guide.md  nomenclature_and_symbols.md  perception_pipeline.md  report_expansion.md  results_tables.md
infrastructure/: docker-compose.full.yml
infrastructure/k8s/: api-deployment.yaml  dashboard-deployment.yaml
infrastructure/mosquitto/: mosquitto.conf
infrastructure/terraform/: main.tf  providers.tf  variables.tf
ops_dashboard/: index.html  package.json
ops_dashboard/src/: App.jsx  styles.css
ros2_ws/: build.sh
ros2_ws/src/drone_control/: CMakeLists.txt  package.xml
ros2_ws/src/drone_control/config/: controller.yaml
ros2_ws/src/drone_control/include/drone_control/: control_allocator.hpp  se3_controller.hpp
ros2_ws/src/drone_control/launch/: drone_control.launch.py
ros2_ws/src/drone_control/src/: control_allocator.cpp  geometric_controller_node.cpp  mixer_node.cpp  se3_controller.cpp
ros2_ws/src/drone_coverage/: CMakeLists.txt  package.xml
ros2_ws/src/drone_coverage/include/drone_coverage/: boustrophedon_planner.hpp  minimum_snap_trajectory.hpp  standoff_regulator.hpp
ros2_ws/src/drone_coverage/launch/: drone_coverage.launch.py
ros2_ws/src/drone_coverage/src/: boustrophedon_planner.cpp  coverage_planner_node.cpp  minimum_snap_trajectory.cpp  standoff_regulator.cpp
ros2_ws/src/drone_estimation/: CMakeLists.txt  package.xml
ros2_ws/src/drone_estimation/include/drone_estimation/: eskf.hpp
ros2_ws/src/drone_estimation/launch/: drone_estimation.launch.py
ros2_ws/src/drone_estimation/src/: eskf.cpp  eskf_node.cpp
ros2_ws/src/drone_perception/: CMakeLists.txt  package.xml
ros2_ws/src/drone_perception/drone_perception/: __init__.py  fusion.py  model_export.py  model_runner.py
ros2_ws/src/drone_perception/launch/: drone_perception.launch.py
ros2_ws/src/drone_perception/scripts/: perception_node.py
ros2_ws/src/ground_robot_dock/: CMakeLists.txt  package.xml
ros2_ws/src/ground_robot_dock/ground_robot_dock/: __init__.py
ros2_ws/src/ground_robot_dock/launch/: ground_robot_dock.launch.py
ros2_ws/src/ground_robot_dock/scripts/: docking_node.py
ros2_ws/src/ground_robot_nav/: CMakeLists.txt  package.xml
ros2_ws/src/ground_robot_nav/include/ground_robot_nav/: skid_steer_mpc.hpp
ros2_ws/src/ground_robot_nav/launch/: ground_robot_nav.launch.py
ros2_ws/src/ground_robot_nav/src/: mpc_local_planner_node.cpp  skid_steer_mpc.cpp  slam_manager_node.cpp
ros2_ws/src/nde_crawler/: CMakeLists.txt  package.xml
ros2_ws/src/nde_crawler/launch/: nde_crawler.launch.py
ros2_ws/src/nde_crawler/nde_crawler/: __init__.py
ros2_ws/src/nde_crawler/scripts/: crawler_node.py
ros2_ws/src/nde_crawler/src/: crawler_controller.cpp
ros2_ws/src/safety_monitor/: CMakeLists.txt  package.xml
ros2_ws/src/safety_monitor/include/safety_monitor/: geofence_monitor.hpp  rate_monotonic_scheduler.hpp
ros2_ws/src/safety_monitor/launch/: safety_monitor.launch.py
ros2_ws/src/safety_monitor/src/: geofence_monitor.cpp  rate_monotonic_scheduler.cpp  safety_watchdog_node.cpp
ros2_ws/src/sos_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/sos_interfaces/action/: CrawlToTarget.action  InspectBlade.action
ros2_ws/src/sos_interfaces/msg/: BladePatch.msg  DefectHypothesis.msg  PatchReport.msg  RULEstimate.msg  TelemetryStatus.msg
ros2_ws/src/windfarm_bringup/: CMakeLists.txt  package.xml
ros2_ws/src/windfarm_bringup/launch/: full_system.launch.py
simulation/launch/: full_sim.launch.py  sim_bridge.launch.py  sim_bringup.launch.py
simulation/models/inspection_uav/: model.config  model.sdf
simulation/models/ugv_mothership/: model.config  model.sdf
simulation/scripts/: smoke_test.py  smoke_test_sim.py
simulation/worlds/: windfarm.sdf  windfarm_field.sdf
sos_orchestrator/: Dockerfile.api  Dockerfile.worker  config.py  requirements.txt  worker.py
sos_orchestrator/api/: main.py
sos_orchestrator/db/: models.py  session.py
sos_orchestrator/digital_twin/: evoc.py  paris_rul.py
sos_orchestrator/mrta/: auction.py  hungarian.py
sos_orchestrator/telemetry/: mqtt_client.py
tests/: conftest.py  integration_validation.py  test_api.py  test_dataset.py  test_digital_twin.py  test_e2e_orchestration.py  test_model_runner.py  test_mrta.py  test_perception.py  test_ros_nodes.py  test_smoke_sim.py
training/: README.md  dataset.py  generate_synthetic_data.py  train.py
