<?xml version="1.0"?>
<package format="3">
  <name>drone_control</name>
  <version>0.1.0</version>
  <description>Geometric controller and control allocation for the inspection UAV.</description>
  <maintainer email="prasiddh@example.com">Prasiddh Patel</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>
  <depend>eigen3_cmake_module</depend>
  <depend>sos_interfaces</depend>
  <export><build_type>ament_cmake</build_type></export>
</package>
