<?xml version="1.0"?>
<package format="3">
  <name>ground_robot_dock</name>
  <version>0.1.0</version>
  <description>Mobile docking, relay and charging manager for UAV mothership UGV.</description>
  <maintainer email="prasiddh@example.com">Prasiddh Patel</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <export><build_type>ament_cmake</build_type></export>
</package>
