<?xml version="1.0"?>
<package format="3">
  <name>ground_robot_nav</name>
  <version>0.1.0</version>
  <description>MPC local planner and SLAM manager for the UGV mothership.</description>
  <maintainer email="prasiddh@example.com">Prasiddh Patel</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>
  <depend>eigen3_cmake_module</depend>
  <depend>sos_interfaces</depend>
  <export><build_type>ament_cmake</build_type></export>
</package>
