<?xml version="1.0"?>
<package format="3">
  <name>safety_monitor</name>
  <version>0.1.0</version>
  <description>Rate-monotonic scheduler and safety watchdog for windfarm SoS.</description>
  <maintainer email="prasiddh@example.com">Prasiddh Patel</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sos_interfaces</depend>
  <export><build_type>ament_cmake</build_type></export>
</package>
