cmake_minimum_required(VERSION 3.8)
project(windfarm_bringup)

find_package(ament_cmake REQUIRED)
find_package(drone_control REQUIRED)
find_package(drone_estimation REQUIRED)
find_package(drone_coverage REQUIRED)
find_package(drone_perception REQUIRED)
find_package(ground_robot_nav REQUIRED)
find_package(ground_robot_dock REQUIRED)
find_package(nde_crawler REQUIRED)
find_package(safety_monitor REQUIRED)

install(DIRECTORY launch config DESTINATION share/${PROJECT_NAME})
ament_package()
