<?xml version="1.0"?>
<package format="3">
  <name>windfarm_bringup</name>
  <version>0.1.0</version>
  <description>System bringup package for full aerial-ground wind-farm SoS.</description>
  <maintainer email="prasiddh@example.com">Prasiddh Patel</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <export><build_type>ament_cmake</build_type></export>
</package>
